# lila-openingexplorer

./: .dockerignore  .env  .gitignore  .gitmodules  .scalafmt.conf  .travis.yml  Cargo.toml  Dockerfile  LICENSE  README.md  bench.py  bench.sh  build.rs  build.sbt  client.py  fens.py  import-master.py  import-openings.sh  index-pgn.py  kcdbext.h.patch  kyotocabinet-java-1.24.tar.gz.sha512  optimum-pack-format-1.py  seed-db.sh  show-size.py  unused-openings.py
.github/: dependabot.yml
.github/workflows/: ci.yml  image.yml  test.yml
app/: AppLoader.scala  Cache.scala  Category.scala  Config.scala  Database.scala  Database.scala.bak  Entry.scala  Entry.scala.bak  Forms.scala  GameInfo.scala  GameInfoDatabase.scala  GameRef.scala  Importer.scala  JsonView.scala  Kyoto.scala  LichessDatabase.scala  LichessDatabasePacker.scala  MasterDatabase.scala  MasterDatabasePacker.scala  MasterEntry.scala  MasterQueryResult.scala  MoveStats.scala  PackHelper.scala  PgnDatabase.scala  QueryResult.scala  RatingGroup.scala  SpeedGroup.scala  SubEntry.scala  Util.scala  package.scala
app/controllers/: Application.scala  WebApi.scala  WebApi.scala.bak
app/views/: main.scala.html
benches/: benches.rs
conf/: application.conf.example  base.conf  logback.xml  routes
data/: .gitignore
doc/: packing.md
import-pgn/: Cargo.toml  sample.py
index-pgn/: Cargo.toml  sample.ods
index-pgn/src/: main.rs
lila-openingexplorer/: Cargo.toml
lila-openingexplorer-import/: Cargo.toml
lila-openingexplorer/src/api/: error.rs  query.rs  response.rs
lila-openingexplorer/src/indexer/: lichess.rs  mod.rs  player_queue.rs
lila-openingexplorer/src/model/: history.rs  key.rs  masters.rs  stats.rs  uci.rs  uint.rs
project/: plugins.sbt
src/: api.rs  db.rs  importer.rs  indexer.rs  lib.rs  lila.rs  main.rs  metrics.rs  model.rs  opening.rs  stats.rs  util.rs  zobrist.rs
src/api/: error.rs  fen.rs  mod.rs  nd_json.rs  ndjson.rs  query.rs  response.rs  variant.rs
src/db/: indexer.rs  mod.rs
src/indexer/: actor.rs  lichess.rs  lila.rs  masters.rs  mod.rs  player.rs  player_queue.rs  queue.rs
src/model/: date.rs  game_id.rs  game_info.rs  history.rs  key.rs  lichess.rs  lichess_game.rs  master.rs  masters.rs  mod.rs  mode.rs  month.rs  personal.rs  player.rs  speed.rs  stats.rs  uci.rs  uint.rs  user.rs  year.rs
test/: CategoryTest.scala  EntryTest.scala  EntryTest.scala.bak  GameInfo.scala  GameInfoTest.scala  GameRefTest.scala  HashTest.scala  LichessDatabasePackerTest.scala  MasterDatabasePackerTest.scala  MasterEntryTest.scala  PackHelperTest.scala  RatingGroupTest.scala  SpeedGroupTest.scala  SubEntryTest.scala  UtilTest.scala
util/: Makefile  convert.cc  gen.cc  stat.cc
