[package]
name = "lila-openingexplorer"
version = "3.0.0"
publish = false
description = "An opening explorer for lichess.org"
homepage = "https://explorer.lichess.ovh"
repository = "https://github.com/lichess-org/lila-openingexplorer"
readme = "README.md"
license = "AGPL-3.0+"
authors = ["Niklas Fiekas <niklas.fiekas@backscattering.de>"]
categories = ["games"]
keywords = ["chess", "lichess"]
edition = "2021"

[dependencies]
async-channel = "1"
axum = "0.5"
bytes = "1"
clap = { version = "3", features = ["derive", "env"] }
csv = "1"
env_logger = "0.9"
futures-util = "0.3"
log = "0.4"
moka = "0.9"
partial_sort = "0.1"
pin-project-lite = "0.2"
reqwest = { version = "0.11", features = ["stream"] }
rocksdb = { version = "0.19", features = ["lz4", "zstd", "jemalloc"], default-features = false }
rustc-hash = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "2", features = ["time_0_3"] }
sha-1 = "0.10"
shakmaty = { version = "0.21", features = ["variant"] }
sync_wrapper = "0.1"
thiserror = "1"
tikv-jemallocator = "0.5" # matching rocksdb
time = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.3", features = ["set-header"] }

[dev-dependencies]
quickcheck = "1"
iai = "0.1"

[[bench]]
name = "benches"
harness = false
