[package]
name = "lila-openingexplorer"
version = "3.0.0"
publish = false
description = "An opening explorer for lichess.org"
homepage = "https://explorer.lichess.ovh"
repository = "https://github.com/lichess-org/lila-openingexplorer"
readme = "README.md"
license = "AGPL-3.0+"
authors = ["Niklas Fiekas <niklas.fiekas@backscattering.de>"]
categories = ["games"]
keywords = ["chess", "lichess"]
edition = "2021"

[dependencies]
async-channel = "1"
axum = "=0.6.0-rc.4"
bytes = "1"
clap = { version = "4", features = ["derive", "env", "deprecated"] }
csv = "1"
env_logger = "0.10"
futures-util = "0.3"
log = "0.4"
moka = "0.9"
nohash-hasher = "0.2"
partial_sort = "0.1"
pin-project-lite = "0.2"
reqwest = { version = "0.11", features = ["stream"] }
rocksdb = { version = "0.19", features = ["lz4", "zstd", "jemalloc"], default-features = false, git = "https://github.com/rust-rocksdb/rust-rocksdb" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "2", features = ["time_0_3"] }
sha-1 = "0.10"
shakmaty = { version = "0.22", features = ["variant", "nohash-hasher"], git = "https://github.com/niklasf/shakmaty" }
sync_wrapper = "0.1"
thin-vec = "0.2"
thiserror = "1"
tikv-jemallocator = "0.5" # matching rocksdb
time = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.3", features = ["set-header"] }

[dev-dependencies]
quickcheck = "1"
iai = "0.1"

[[bench]]
name = "benches"
harness = false
