[package]
name = "index-pgn"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
pgn-reader = "0.20"
btoi = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
bzip2 = "0.4"
serde = { version = "1", features = ["derive"] }
serde_with = "2"
serde_json = "1"
clap = { version = "3", features = ["derive"] }
crossbeam = "0.8"
indicatif = "0.17.0"
